src/objects/QVM_Web_Form_Config__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Contains web form configuration values</description>
    <fields>
        <fullName>CampaignId__c</fullName>
        <description>Campaign Id to which this Web form needs to be linked
Used to assign the Campaign Name in email alerts</description>
        <label>CampaignId</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Linked_To_Campaign__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked when a web form needs to be linked to a campaign</description>
        <label>Is Linked To Campaign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LeadSource__c</fullName>
        <description>Source where the lead is created from.</description>
        <label>LeadSource</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maximum_Number_Of_Images_Required__c</fullName>
        <description>Maximum Number Of Images required in each application form.</description>
        <label>Maximum Number Of Images Required</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_Number_Of_Images_Required__c</fullName>
        <label>Minimum Number Of Images Required</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OpportunityRecordTypeId__c</fullName>
        <description>Id of the Opportunity record type to which this lead will be associated when it&apos;s converted.</description>
        <label>OpportunityRecordTypeId</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Terms_And_Conditions_URL__c</fullName>
        <label>Terms And Conditions URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>leadRecordTypeId__c</fullName>
        <label>leadRecordTypeId</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>QVM_Web_Form_Config</label>
</CustomObject>